(1) merge from trunk; (2) fix new findbugs errors